<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">


    <TextView
        android:id="@+id/exhibit"
        android:layout_width="310dp"
        android:layout_height="39dp"

        android:layout_marginStart="39dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
        android:hint="exhibit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="+"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exhibit" />


</androidx.constraintlayout.widget.ConstraintLayout>